@@ -2205,12 +2205,31 @@ eBBlockFromiCode (iCode * ic)
   offsetFold (ebbi->bbOrder, ebbi->count);
 
   /* lospre */
+  computeControlFlow (ebbi);
+  loops = createLoopRegions (ebbi);
+  computeDataFlow (ebbi);
+  computeLiveRanges (ebbi->bbOrder, ebbi->count, FALSE);
   adjustIChain (ebbi->bbOrder, ebbi->count);
   ic = iCodeLabelOptimize (iCodeFromeBBlock (ebbi->bbOrder, ebbi->count));
   if (optimize.lospre && (TARGET_Z80_LIKE || TARGET_HC08_LIKE || TARGET_IS_STM8)) /* Todo: enable for other ports. */
-    lospre (ic, ebbi);
-  dumpEbbsToFileExt (DUMP_LOSPRE, ebbi);
-  /* Break down again and redo some steps to not confuse live range analysis. */
+    {
+      lospre (ic, ebbi);
+      dumpEbbsToFileExt (DUMP_LOSPRE, ebbi);
+
+      /* GCSE, lospre and maybe other optimizations sometimes create temporaries that have non-connected live ranges, which is bad. Split them. */
+#if 0
+      ebbi = iCodeBreakDown (ic);
+      computeControlFlow (ebbi);
+      loops = createLoopRegions (ebbi);
+      computeDataFlow (ebbi);
+      recomputeLiveRanges (ebbi->bbOrder, ebbi->count, FALSE);
+      adjustIChain (ebbi->bbOrder, ebbi->count);
+      ic = iCodeLabelOptimize (iCodeFromeBBlock (ebbi->bbOrder, ebbi->count));
+      separateLiveRanges (ic, ebbi);
+#endif
+    }
+
+  /* Break down again and redo some steps to not confuse live range analysis later. */
   ebbi = iCodeBreakDown (ic);
   computeControlFlow (ebbi);
   loops = createLoopRegions (ebbi);
@@ -2276,7 +2295,7 @@ eBBlockFromiCode (iCode * ic)
   miscOpt (ebbi->bbOrder, ebbi->count);
 
   /* compute the live ranges */
-  computeLiveRanges (ebbi->bbOrder, ebbi->count, TRUE);
+  recomputeLiveRanges (ebbi->bbOrder, ebbi->count, TRUE);
 
   if (options.dump_range)
     dumpEbbsToFileExt (DUMP_RANGE, ebbi);
